--- a/package.json
+++ b/package.json
@@ -4,25 +4,81 @@
   "description": "Video Player App",
   "main": "index.js",
   "scripts": {
-
+    "dev": "webpack-dev-server --env.env=dev",
+    "dev:bundleanalyzer": "yarn dev --env.addons=bundleanalyzer",
+    "prebuild": "rimraf build",
+    "build": "cross-env NODE_ENV=production webpack -p --env.env=prod",
+    "build:bundleanalyzer": "yarn build --env.addons=bundleanalyzer",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Ebrahim-hamdy/video-player.git"
+    "url": "git@github.com:Ebrahim-hamdy/tasks-time-tracker-react.git"
   },
   "author": "Ebrahim Hamdy",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ebrahim-hamdy/tasks-time-tracker-react/issues"
+  },
+  "homepage": "https://github.com/Ebrahim-hamdy/tasks-time-tracker-react#readme",
   "devDependencies": {
-
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.5.1",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.5",
+    "chalk": "^2.4.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-to-json": "^3.3.5",
+    "eslint-plugin-import": "^2.17.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.3.1",
+    "jest-transform-css": "^2.0.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.11.0",
+    "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^5.3.0",
+    "react-hot-loader": "^4.8.4",
+    "react-test-renderer": "^16.8.6",
+    "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.8.0",
+    "react-delay-render": "^0.1.2",
+    "react-dom": "^16.8.0",
+    "react-imported-component": "^5.4.0",
+    "react-player": "^1.11.0",
+    "react-router-dom": "^4.3.1",
+    "superstruct": "^0.6.0"
   },
   "keywords": [
     "react",
     "webpack",
     "babel",
-    "sass",
-    "material-ui"
+    "sass"
   ]
 }
