chore: add heruku config

--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "express": "^4.16.4",
+    "express-favicon": "^2.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-delay-render": "^0.1.2",
